[package]
name = "raurman"
author = "Miska Tammenpää"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
nix = { version = "0.27.1", features = ["user"]}
serde_json = { version = "1.0.113", features = ["deserialize"] }
