[package]
name = "raurman"
authors = ["Miska Tammenpää <miska@tammenpaa.com>"]
version = "1.0.0"
edition = "2021"
license = "GPLv3"
description = "Package management tool for Arch Linux combining pacman and AUR installations"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.1"
log = { version = "0.4.20", features = ["std"]}
nix = { version = "0.27.1", features = ["user"]}
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
thiserror = "1.0.56"
